Activating the search bar

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                                 <h1 title></h1>
                                 <p class="tutor" tutor></p>
                                 <p class="rating" rating>
-                                    <p class="numberofvotes" numberofvotes style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;"></p>
+                                    <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
                                 </p>
                                 <p class="price" price></p>
-                                <div class="bestseller" bestseller></div>
+                                <div class="bestseller" bestseller>bestseller</div>
                             </div>
                         </a>
                     </div>
