Activating the search bar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="" class="logo"><img src="https://www.udemy.com/staticx/udemy/images/v7/logo-udemy.svg" alt="udemy logo" ></a>
         <a href="" class="header-links">Categories</a> 
         <div class="container">
-            <form action="" class="search-bar">
+            <form action="" class="search-bar" form>
                 <button type="submit"><img src="images/search.png" alt="search"></button>
                 <input type="text" placeholder="Search for anything" search-courses>
             </form>
