--- a/index.html
+++ b/index.html
@@ -77,22 +77,6 @@
                         </button>
                     </div>
                     <!-- <div class="courses" python-courses-container></div> -->
-                    <template python-courses-template>
-                        <div>
-                            <a href="" class="course">
-                                <div>
-                                    <img src="" alt="" image>
-                                    <h1 title></h1>
-                                    <p class="tutor" tutor></p>
-                                    <p class="rating" rating>
-                                        <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
-                                    </p>
-                                    <p class="price" price></p>
-                                    <div class="bestseller" bestseller>bestseller</div>
-                                </div>
-                            </a>
-                        </div>
-                    </template>
                 </div>
 
                 <div class="tab-pane" id="excel">
@@ -113,22 +97,6 @@
                         </button>
                     </div>
                     <!-- <div class="courses" excel-courses-container></div> -->
-                    <template excel-courses-template>
-                        <div>
-                            <a href="" class="course">
-                                <div>
-                                    <img src="" alt="" image>
-                                    <h1 title></h1>
-                                    <p class="tutor" tutor></p>
-                                    <p class="rating" rating>
-                                        <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
-                                    </p>
-                                    <p class="price" price></p>
-                                    <div class="bestseller" bestseller>bestseller</div>
-                                </div>
-                            </a>
-                        </div>
-                    </template>
                 </div>
 
                 <div class="tab-pane" id="web-development">
@@ -137,22 +105,6 @@
                     <p class="firstp">The world of web development is as wide as the internet itself. Much of our social and vocational lives play out on the internet, which prompts new industries aimed at creating, managing, and debugging the websites and applications that we increasingly rely on.</p>
                     <a href="" class="explore"><div><span>Explore Web development</span></div></a>
                     <div class="courses" web-development-courses-container></div>
-                    <template web-development-courses-template>
-                        <div>
-                            <a href="" class="course">
-                                <div>
-                                    <img src="" alt="" image>
-                                    <h1 title></h1>
-                                    <p class="tutor" tutor></p>
-                                    <p class="rating" rating>
-                                        <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
-                                    </p>
-                                    <p class="price" price></p>
-                                    <div class="bestseller" bestseller>bestseller</div>
-                                </div>
-                            </a>
-                        </div>
-                    </template>
                 </div>
 
                 <div class="tab-pane" id="javascript">
@@ -161,22 +113,6 @@
                     <p class="firstp">JavaScript is a text-based computer programming language used to make dynamic web pages. A must-learn for aspiring web developers or programmers, JavaScript can be used for features like image carousels, displaying countdowns and timers, and playing media on a webpage. With JavaScript online classes, you can learn to build...</p>
                     <a href="" class="explore"><div><span>Explore JavaScript</span></div></a>
                     <div class="courses" javascript-courses-container></div>
-                    <template javascript-courses-template>
-                        <div>
-                            <a href="" class="course">
-                                <div>
-                                    <img src="" alt="" image>
-                                    <h1 title></h1>
-                                    <p class="tutor" tutor></p>
-                                    <p class="rating" rating>
-                                        <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
-                                    </p>
-                                    <p class="price" price></p>
-                                    <div class="bestseller" bestseller>bestseller</div>
-                                </div>
-                            </a>
-                        </div>
-                    </template>
                 </div>
 
                 <div class="tab-pane" id="datascience">
@@ -185,22 +121,6 @@
                     <p class="firstp">Data science application is an in-demand skill in many industries worldwide — including finance, transportation, education, manufacturing, human resources, and banking. Explore data science courses with Python, statistics, machine learning, and more to grow your knowledge. Get data science training if you’re into research, statistics...</p>
                     <a href="" class="explore"><div><span>Explore Data Science</span></div></a>
                     <div class="courses" datascience-courses-container></div>
-                    <template datascience-courses-template>
-                        <div>
-                            <a href="" class="course">
-                                <div>
-                                    <img src="" alt="" image>
-                                    <h1 title></h1>
-                                    <p class="tutor" tutor></p>
-                                    <p class="rating" rating>
-                                        <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
-                                    </p>
-                                    <p class="price" price></p>
-                                    <div class="bestseller" bestseller>bestseller</div>
-                                </div>
-                            </a>
-                        </div>
-                    </template>
                 </div>
 
                 <div class="tab-pane" id="awscertification">
@@ -209,22 +129,6 @@
                     <p class="firstp">Prep for your AWS certification with an AWS course on Udemy. Learn the fundamentals of AWS such as working with a serverless platform, the various frameworks, security and more. With these courses, you’ll build the valuable skills you need to implement cloud initiatives — and open up new career opportunities...</p>
                     <a href="" class="explore"><div><span>Explore AWS Certification</span></div></a>
                     <div class="courses" awscertification-courses-container></div>
-                    <template awscertification-courses-template>
-                        <div>
-                            <a href="" class="course">
-                                <div>
-                                    <img src="" alt="" image>
-                                    <h1 title></h1>
-                                    <p class="tutor" tutor></p>
-                                    <p class="rating" rating>
-                                        <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
-                                    </p>
-                                    <p class="price" price></p>
-                                    <div class="bestseller" bestseller>bestseller</div>
-                                </div>
-                            </a>
-                        </div>
-                    </template>
                 </div>
 
                 <div class="tab-pane" id="drawing">
@@ -233,23 +137,23 @@
                     <p class="firstp">Want to start drawing for fun or take your craft to the next level? Explore our online drawing classes and learn pencil drawing, figure drawing, cartoon drawing, character drawing for cartoons and anime, illustration, sketching, shading and more. Take an overview course on the fundamentals of drawing or zero...</p>
                     <a href="" class="explore"><div><span>Explore Drawing</span></div></a>
                     <div class="courses" drawing-courses-container></div>
-                    <template drawing-courses-template>
-                        <div>
-                            <a href="" class="course">
-                                <div>
-                                    <img src="" alt="" image>
-                                    <h1 title></h1>
-                                    <p class="tutor" tutor></p>
-                                    <p class="rating" rating>
-                                        <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
-                                    </p>
-                                    <p class="price" price></p>
-                                    <div class="bestseller" bestseller>bestseller</div>
-                                </div>
-                            </a>
-                        </div>
-                    </template>
                 </div>
+                <template courses-template>
+                    <div>
+                        <a href="" class="course">
+                            <div>
+                                <img src="" alt="" image>
+                                <h1 title></h1>
+                                <p class="tutor" tutor></p>
+                                <p class="rating" rating>
+                                    <p class="numberofvotes" style="display: inline; color: black; margin-right: 5px; font-size: 1.3rem; opacity: .8;" numberofvotes></p>
+                                </p>
+                                <p class="price" price></p>
+                                <div class="bestseller" bestseller>bestseller</div>
+                            </div>
+                        </a>
+                    </div>
+                </template>
             </div>
         </div>
 
